--- a/package.json
+++ b/package.json
@@ -11,17 +11,29 @@
   },
   "dependencies": {
     "expo": "~45.0.0",
+    "expo-phaser": "^0.0.1-alpha.0",
     "expo-status-bar": "~1.3.0",
+    "i": "^0.3.7",
+    "npm": "^8.12.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-handler": "^2.4.2",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-web": "0.17.7",
+    "react-native-webview": "^11.21.1",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "@types/react-navigation": "^3.4.0",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "@types/react": "17.0.2"
+  }
 }
